Fix line wrapping in instances list
Previously, we set the white-space to nowrap on the instances
section. This is incorrect, because it means that on particularly long
instances, the text will overflow the page and cause horizontal
scrolling.

I chose pre-wrap here because this is code. This setting will, per MDN,
ensure that:

    Sequences of white space are preserved. Lines are broken at newline
    characters, at <br>, and as necessary to fill line boxes.

--- a/haddock-api/resources/html/Linuwial.std-theme/linuwial.css
+++ b/haddock-api/resources/html/Linuwial.std-theme/linuwial.css
@@ -568,7 +568,7 @@ table.info {
 }
 
 #interface td.src {
-  white-space: nowrap;
+  white-space: pre-wrap;
 }
 
 /* @end */
